@@ -1,10 +1,10 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: http://www.guidovanderleest.nl/myknowledgebase
-Version: 2.7
+Version: 2.8
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
-Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: primary sidebar, homepage sidebar, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description, full width page template, dropdown navigation. That's it. Enjoy. 
+Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: primary sidebar, widget areas in header, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description, full width page template, dropdown navigation. That's it. Enjoy. 
 Tags: one-column, two-columns, right-sidebar, fixed-layout, responsive-layout, full-width-template, custom-background, custom-header, custom-menu, featured-images, white, blue, light, gray, editor-style, translation-ready
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
@@ -68,7 +68,8 @@ table {
 
 /* BODY AND CONTAINER */
 body {background:#fff; font-family:'Open Sans', sans-serif; font-size:0.9em; color:#333; line-height:1.5em;}
-#container {max-width:1200px; position:relative; overflow:hidden; margin:0 auto 0; padding:0 1%; text-align:left; word-wrap:break-word;}
+#container {max-width:1200px; position:relative; margin:0 auto 0; padding:0 1%; text-align:left; word-wrap:break-word;}
+#container:after {content:''; display:block; height:0; clear:both;}
 
 
 /* MAIN CONTENT AREA */
@@ -98,7 +99,7 @@ ins, mark {font-weight:bold; background:none; color:#08a0ff;}
 cite, em, abbr, acronym {font-style:italic;}
 code, pre {margin:10px 0; padding:5px 10px; display:block; border:1px solid #eee;}
 blockquote, q {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #08a0ff;}
-address {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; border-left:2px solid #333;}
+address {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; border-left:2px solid #08a0ff;}
 p {margin:0 0 10px; text-align:justify;}
 
 
@@ -107,8 +108,8 @@ table {margin:10px 0; border-collapse:collapse;}
 table, th, td {border: 1px solid #eee; padding:5px 10px;}
 table th {font-weight:bold;}
 
-ul {list-style:square; margin:2px 0 2px 0;}
-ol {list-style:decimal; margin:2px 0 2px 0;}
+ul {list-style:square; margin:5px 0 5px 0;}
+ol {list-style:decimal; margin:5px 0 5px 0;}
 li {margin:0 0 0 20px;}
 dl {margin:10px 0;}
 dt {font-weight:bold;}
@@ -117,8 +118,8 @@ dd {margin:0 0 0 20px;}
 
 /* INPUTS */
 input, select, textarea {-webkit-appearance:none; -moz-appearance:none; border:1px solid #eee; padding:2px 5px; background:none; font-size:1em; font-family:'Open Sans', sans-serif;}
-input[type="submit"], input[type="reset"] {cursor:pointer;	border:0; padding:2px 5px; background:#08a0ff; color:#fff;}
-input[type="submit"]:hover, input[type="reset"]:hover {background:#333;}
+input[type="submit"], input[type="reset"], input[type="button"] {cursor:pointer; border:0; padding:2px 5px; background:#08a0ff; color:#fff;}
+input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover {background:#333;}
 input[type="checkbox"]{-webkit-appearance:checkbox; -moz-appearance:checkbox;}
 input[type="radio"]{-webkit-appearance:radio; -moz-appearance:radio;}
 select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
@@ -208,12 +209,13 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 
 /* PAGE */
-.page-title {padding:0 0 10px;}
+.page-title {clear:both; padding:0 0 10px;}
 .archive-description {display:block; font-style:italic;}
 .pagelink {clear:both; display:block; margin:20px 0 10px;}
 
 
 /* POST */
+.post-title {clear:both;}
 .post-title a:hover {color:#333; text-decoration:none;}
 .sticky {clear:both; display:block; text-align:center; color:#fff; background:#08a0ff; margin:0 0 10px; padding:2px 5px;}
 .postmetadata {clear:both; display:block; margin:20px 0; padding:5px 10px; background:#f8f8f8; border:1px solid #eee;}
@@ -245,12 +247,11 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 .wp-post-image, .single-image {float:left; margin:0.4em 1em 0.4em 0;}
 
-.wp-caption {background:none; max-width:100%;}
+.wp-caption {max-width:100%;}
 .wp-caption-text {text-align:center;}
 
 .gallery dl, .gallery dt, .gallery dd {margin:0; padding:0;}
-.gallery-caption {background:none; max-width:100%;}
-.gallery-caption-text {text-align:center;}
+.gallery-caption {max-width:100%; text-align:center;}
 
 
 /* SEARCHFORM */
@@ -261,18 +262,19 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 /* COMMENTS */
 #comments {width:100%; clear:both; float:left;}
-#comments .comment-list {background:#f8f8f8; border:1px solid #eee; font-weight:normal; margin:20px 0; padding:0 20px 0 10px;}
-#comments .comment-list ol {list-style:none;}
-#comments .comment-list li {list-style:none; margin:0 0 0 10px;}
+.comment-list {background:#f8f8f8; border:1px solid #eee; font-weight:normal; margin:20px 0; padding:0 20px 0 10px;}
+.comment-list ol {list-style:none;}
+.comment-list li {list-style:none; margin:0 0 0 10px;}
 .comment-body {border-left:2px solid #08a0ff; padding:0 0 0 15px; margin:20px 0;}
 .comment-notes, .form-allowed-tags {font-size:0.75em; padding:5px 0;}
 .comments-title, .comment-reply-title, .no-comments {clear:both; font-size:1.5em;} 
-.bypostauthor {font-style:italic;}
+.comment-author .avatar {margin:0 5px 0 0;}
+.bypostauthor, .comment-awaiting-moderation {font-style:italic;}
 
-#respond {padding:0; margin:0; clear:both;}
-#commentform label {padding:0 0 5px; display:block;}
-#commentform textarea, #commentform input {width:90%; padding:2px 5px;}
-#commentform input[type="submit"] {width:9em; padding:2px 5px;} 
+#respond {width:100%; clear:both;}
+.comment-form label {padding:0 0 5px; display:block;}
+.comment-form input, .comment-form textarea {width:80%;}
+.comment-form input[type="submit"] {width:auto;}
 
 
 /* COMMENT NAV */
@@ -306,8 +308,8 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 /* FOOTER INPUTS */
 #footer input, #footer select, #footer textarea {color:#fff;}
-#footer input[type="submit"] {background:#fff; color:#333;}
-#footer input[type="submit"]:hover {background:#333; color:#fff;}
+#footer input[type="submit"], #footer input[type="reset"], #footer input[type="button"] {background:#fff; color:#333;}
+#footer input[type="submit"]:hover, #footer input[type="reset"]:hover, #footer input[type="button"]:hover {background:#333; color:#fff;}
 
 
 /* MOBILE */
