@@ -1,6 +1,11 @@
 CHANGELOG
 =========
 
+MyKnowledgeBase version version 2.8 - january 2016
+- updated file style
+- updated file custom-editor-style
+- updated file functions
+
 MyKnowledgeBase version 2.7 - december 2015
 - theme customizer: set amount of posts for each knowledgebase category
 - file functions: theme customizer
